k3s/infrastructure/networking/traefik/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: route
  labels:
    app: traefik
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v3.4
          args:
            - --configFile=/etc/traefik/traefik.yaml
          ports:
            - name: websecure
              containerPort: 443
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: config
              mountPath: /etc/traefik
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: traefik-static
