k3s/infrastructure/networking/traefik/02-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: route
spec:
  type: LoadBalancer
  # externalTrafficPolicy: Local
  selector:
    app: traefik
  ports:
    - name: websecure
      port: 443
      targetPort: websecure
