k3s/infrastructure/networking/traefik/dashboard.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: route
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  entryPoints:
    - websecure
  tls:
    secretName: wildcard.vextech.dev-tls
  routes:
    - match: Host(`traefik.vextech.dev`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: traefik-basicauth
          namespace: route
